--- a/Landing Page/Landing.html
+++ b/Landing Page/Landing.html
@@ -37,6 +37,19 @@
             </div>
         </div>
     </div>
-    
+    <div class="hero_background">
+        <div class="world_text">
+            <h1>WORLDS 2023</h1>
+        </div>
+        <div class="h2_text">
+            <h2>The Pinnacle of Esports Competition Is <span class="subtext">Back</span></h2>
+        </div>
+        <div class="text3">
+            <p class="p1">Don't miss a second of the action at LOLESPORTS.COM</p>
+        </div>
+        <div class="watchNow_container">
+            <button id="WatchNow_button">Watch Now</button>
+        </div>
+    </div>
 </body>
 </html>
