--- a/Landing Page/Landing.html
+++ b/Landing Page/Landing.html
@@ -51,5 +51,47 @@
             <button id="WatchNow_button">Watch Now</button>
         </div>
     </div>
+    <div class="news_container">
+        <div class="newsHeadline_container">
+            <h2 class="news_text">What's Happening</h2>
+        </div>
+        <div class="newsbox_container">
+            <div class="whats_happening">
+                <div class="news_today">
+                    <h1 class="news_title"><b>TAKE THE DRAKE <span class="title_split">FOR WATER'S SAKE</span></b></h1>
+                    <img class="map_img" src="map.jpg" alt="Map">
+                    <h2 class="news_info">Planting Trees and Taking Drakes 2023</h2>
+                    <h3 class="watermark">NEWS</h3>
+                    <img class="logo_1" src="third_logo.png" alt="Logo">
+                </div>
+            </div>
+            <div class="other_news">
+                <div class="news1">
+                    <h2 class="news1_title">Transition from Summoner Names to Riot IDs</h2>
+                    <p class="news1_mark">NEWS</p>
+                    <img class="img_changeID" src="change_id.jpg" alt="Changing ID">
+                    <img class="logo_2" src="third_logo.png" alt="Logo">
+                </div>
+                <div class="news2">
+                    <h2 class="news2_title">Dev Update: Champs, Lore & More</h2>
+                    <p class="news2_mark">INSIDE RIOT</p>
+                    <img class="img_riotExec" src="riot_exec.jpg" alt="Riot Executives">
+                    <img class="logo_3" src="third_logo.png" alt="Logo">
+                </div>
+                <div class="news3">
+                    <h2 class="news3_title">The Making of Riot's New Home in Seattle</h2>
+                    <p class="news3_mark">OFFICES</p>
+                    <img class="img_riotSeattle" src="riot_seattle.png" alt="Riot in Seattle">
+                    <img class="logo_4" src="third_logo.png" alt="Logo">
+                </div>
+                <div class="news4">
+                    <h2 class="news4_title">Riot Client Game Hubs</h2>
+                    <p class="news4_mark">NEWS</p>
+                    <img class="img_riotgamehub" src="riot_gameHub.png" alt="Riot Game Hubs">
+                    <img class="logo_5" src="third_logo.png" alt="Logo">
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
