--- a/Landing Page/Landing.html
+++ b/Landing Page/Landing.html
@@ -93,5 +93,36 @@
             </div>
         </div>
     </div>
+    <div class="games_container">
+        <div class="games_title">
+            <h1 class="games_text">GAMES</h1>
+        </div>
+        <div class="gameOption_container">
+            <div class="game1">
+                <img class="img_lolbg" src="lol_bg.png" alt="League of Legends Background"/>
+                <img class="img_lol" src="lol_logo.png" alt="League of Legends Title"/>
+            </div>
+            <div class="game2">
+                <img class="img_valobg" src="valo_bg.png" alt="Valorant Background"/>
+                <img class="img_valoLogo" src="valo_logo.png" alt="Valorant Title"/>
+            </div>
+        </div>
+        <div class="gameOption_container">
+            <div class="game3">
+                <img class="img_tacticsbg" src="tactics_bg.png" alt="Teamfight Tactics Background"/>
+                <img class="img_tacticsLogo" src="tactics_logo.png" alt="Teamfight Tactics Title"/>
+            </div>
+            <div class="game4">
+                <img class="img_wildriftbg" src="wildrift_bg.png" alt="LOL Wildrift Background"/>
+                <img class="img_wildriftLogo" src="wildrift_logo.png" alt="LOL Wildrift Title"/>
+            </div>
+        </div>
+        <div class="gameOption_container">
+            <div class="game5">
+                <img class="img_runeterrabg" src="runeterra_bg.png" alt="Legend of Runeterra Background"/>
+                <img class="img_runeterraLogo" src="runeterra_logo.png" alt="Legend of Runeterra Title"/>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
