--- a/Landing Page/Landing.html
+++ b/Landing Page/Landing.html
@@ -124,5 +124,21 @@
             </div>
         </div>
     </div>
+    <div class="esports_mainContainer">
+        <div class="esports_container">
+            <h1 id="esports_text">Esports</h1>
+        </div>
+        <div class="esportsOption_container">
+            <div class="esport1">
+                <img class="img_esport1bg" src="esport1.png" alt="LOL Esport Background"/>
+                <img class="img_lolLogo" src="lol_esport.png" alt="LOL Esport Title"/>
+            </div>
+            <div class="esport2">
+                <img class="img_esport2bg" src="valo_esport.png" alt="Valorant Esport Background"/>
+                <img class="img_valoEsportLogo" src="valo_esport_logo.png" alt="Valorant Esport Title"/>
+            </div>
+        </div>
+        </div>
+    </div>
 </body>
 </html>
