Riot Forge Section

--- a/Landing Page/Landing.html
+++ b/Landing Page/Landing.html
@@ -140,5 +140,24 @@
         </div>
         </div>
     </div>
+    <div class="RiotForge_mainContainer">
+        <div class="RiotForge_container">
+            <h1 id="RiotForge">Riot Forge</h1>
+        </div>
+        <div class="RiotForgeOption_container">
+            <div class="RiotForge1">
+                <img class="img_RiotForge1bg" src="mage_bg.jpg" alt="Mage Seeker Background"/>
+                <img class="img_RiotForge1Logo" src="mage_logo.png" alt="Mage Seeker Title"/>
+            </div>
+            <div class="RiotForge2">
+                <img class="img_RiotForge2bg" src="ruined_bg.png" alt="ruined King Background"/>
+                <img class="img_RiotForge2Logo" src="ruined_logo.png" alt="Ruined King Title"/>
+            </div>
+            <div class="RiotForge3">
+                <img class="img_RiotForge3bg" src="hextech_bg.jpg" alt="Hextech Mayhem Background"/>
+                <img class="img_RiotForge3Logo" src="hextech_logo.png" alt="Hextech Mayhem Title"/>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
