--- a/Landing Page/Landing.html
+++ b/Landing Page/Landing.html
@@ -159,5 +159,29 @@
             </div>
         </div>
     </div>
+    <div class="career_container">
+        <div class="hiring_info">
+            <h1 id="hiring_text">We're hiring!</h1>
+            <p>Team up with Riot to forge your path and craft <span>unforgettable experiences for players</span></p>
+            <div class="availability_container">
+                <div class="open_positions">
+                    <h1>101</h1>
+                    <h2>Open Positions</h2>
+                </div>
+                <div class="offices">
+                    <h1>24</h1>
+                    <h2>Offices</h2>
+                </div>
+            </div>
+            <button class="career_explore">
+                Explore Career
+            </button>
+        </div>
+        <div class="hiringImg_container">
+            <div class="img_hiring">
+                <img class="hiring_place" src="riot_hiring.jpeg" alt="Riot"/>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
