--- a/Landing Page/Landing.html
+++ b/Landing Page/Landing.html
@@ -183,5 +183,26 @@
             </div>
         </div>
     </div>
+    <footer class="footer_container">
+        <div class="footer_upper">
+            <img class="nocircle_fist" src="fist_nocircle.png" alt="Riot Logo"/>
+            <ul class="nav_down">
+                <li>PRESS</li>
+                <li>SECURITY</li>
+                <li>LEGAL</li>
+                <li>LEADERSHIP</li>
+                <li>CANDIDATE PRIVACY</li>
+                <li>TERMS OF SERVICE</li>
+                <li>PRIVACY NOTICE</li>
+                <li>PLAYER SUPPORT</li>
+                <li>E-VERIFY</li>
+                <li>ACCESSIBILITY</li>
+            </ul>
+        </div>
+        <div class="separator"></div>
+        <div class="footer_lower">
+            <p>Azure Python | All rights reserved 2023.</p>
+        </div>
+    </footer>
 </body>
 </html>
