--- a/news.html
+++ b/news.html
@@ -57,9 +57,9 @@
         <div class="search-bar" style="margin-right: 5px;">
           <input type="text" placeholder="Search" />
         </div>
-        <div class="button-container">
-          <button id="SignInButton">Sign In</button>
-        </div>
+        <div class="signIn_container">
+          <button id="signIn_button">SIGN IN</button>
+       </div>
       </div>
     </div>
 
