--- a/about-us.html
+++ b/about-us.html
@@ -10,11 +10,11 @@
   <body>
     <div class="nav_container">
       <div class="riot_logo">
-        <img id="img_riotLogo" src="images/white_logo.png" alt="Riot Logo" />
+        <a id="img_link" href="index.html"><img id="img_riotLogo" src="images/white_logo.png" alt="Riot Logo" /></a>
       </div>
       <div class="fistLogo_container">
         <div class="riot_secondlogo">
-          <img id="img_secondLogo" src="images/second_logo.png" alt="Fist Logo" />
+          <img id="img_secondLogo" src="images/second_logo.png" <a href="in"></a> alt="Fist Logo" />
         </div>
       </div>
       <div class="Info_container">
