--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         </div>
         <div class="RiotForge2">
           <img class="img_RiotForge2bg" src="images/ruined_bg.png" alt="ruined King Background" />
-          <img class="img_RiotForge2Logo" src="ruined_logo.png" alt="Ruined King Title" />
+          <img class="img_RiotForge2Logo" src="images/ruined_logo.png" alt="Ruined King Title" />
         </div>
         <div class="RiotForge3">
           <img class="img_RiotForge3bg" src="images/hextech_bg.jpg" alt="Hextech Mayhem Background" />
