--- a/news.html
+++ b/news.html
@@ -4,14 +4,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Top Bar Navigation</title>
+    <title>News | Riot Games</title>
     <link rel="stylesheet" href="news.css" />
   </head>
   <body>
     <div class="top-bar">
       <div class="left">
         <div class="logo" id="Riot Games Name" style="margin-right: 15px;">
-          <img src="images/riot games logo test.png" alt="Riot Games Name" />
+          <a href="index.html"><img src="images/riot games logo test.png" alt="Riot Games Name" /></a>
         </div>
         <div class="logo" id="Riot Games Logo" style="margin-right: 30px;">
           <img src="images/riot games logo.png" alt="Riot Games Logo" />
