--- a/about-us.html
+++ b/about-us.html
@@ -14,7 +14,7 @@
       </div>
       <div class="fistLogo_container">
         <div class="riot_secondlogo">
-          <img id="img_secondLogo" src="images/second_logo.png" <a href="in"></a> alt="Fist Logo" />
+          <img id="img_secondLogo" src="images/second_logo.png" alt="Fist Logo" />
         </div>
       </div>
       <div class="Info_container">
