--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
           <div class="news2">
             <h2 class="news2_title">Dev Update: Champs, Lore & More</h2>
             <p class="news2_mark">INSIDE RIOT</p>
-            <img class="img_riotExec" src="imagesriot_exec.jpg" alt="Riot Executives" />
-            <img class="logo_3" src="imagesthird_logo.png" alt="Logo" />
+            <img class="img_riotExec" src="images/riot_exec.jpg" alt="Riot Executives" />
+            <img class="logo_3" src="images/third_logo.png" alt="Logo" />
           </div>
           <div class="news3">
             <h2 class="news3_title">The Making of Riot's New Home in Seattle</h2>
