--- a/about-us.html
+++ b/about-us.html
@@ -14,7 +14,7 @@
       </div>
       <div class="fistLogo_container">
         <div class="riot_secondlogo">
-          <img id="img_secondLogo" src="images/second_logo.png" <a href="in"></a> alt="Fist Logo" />
+          <img id="img_secondLogo" src="images/second_logo.png" alt="Fist Logo" />
         </div>
       </div>
       <div class="Info_container">
@@ -39,7 +39,7 @@
     </div>
     <main>
       <div class="flex-container">
-        <div class="video-background-container text-center" style="height: 800px;">
+        <div class="video-background-container text-center" style="height: 800px; margin-bottom: -100px;">
           <video class="video-background" autoplay loop muted>
             <source src="videos/who-are-we-vid.mp4" type="video/mp4" />
             Your browser does not support the video tag.
@@ -54,65 +54,51 @@
           </div>
         </div>
       </div>
-      <div class="background-container">
+      <div class="background-container" style="margin-top: -150px;">
         <div class="text-container text-center">
           <p style="font-weight: bold; font-size: 40px;">
             We aspire to be the most player-focused<br />
             game company in the world
           </p>
-          <div class="centered-left-align-content">
-            <p style="font-size: 20px;">
-              <a href="http://www.riotgames.com/" class="bold-black-link">Riot Games</a>
-              was founded in 2006 to develop, publish, and support the most player-<br />
-              focused games in the world. In 2009, we released our debut title,
-              <em>
-                <a href="http://leagueoflegends.com/" class="bold-black-link">
-                  League of<br />
-                  Legends
-                </a>
-              </em>
-              , to worldwide acclaim. <em>League</em> has gone on to be the most-played PC<br />
-              game in the world and a key driver of the explosive growth of esports.
-            </p>
+          <div class="centered-left-align-content text-center">
+            <div class="text-left-container text-center">
+              <p style="font-size: 20px;">
+                <a href="http://www.riotgames.com/" class="bold-black-link">Riot Games</a>
+                was founded in 2006 to develop, publish, and support the most player- focused games in the world. In 2009, we released our debut title,
+                <em>
+                  <a href="http://leagueoflegends.com/" class="bold-black-link">
+                    League of Legends
+                  </a>
+                </em>
+                , to worldwide acclaim. <em>League</em> has gone on to be the most-played PC game in the world and a key driver of the explosive growth of esports.
+              </p>
 
-            <p style="font-size: 20px;">
-              With <em>League</em> in its second decade, we’re continuing to evolve the game while<br />
-              delivering new experiences to players with
-              <em><a href="http://teamfighttactics.com/" class="bold-black-link">Teamfight Tactics</a></em>, <em><a href="http://playruneterra.com/" class="bold-black-link">Legends of Runeterra</a></em>,<br />
-              <em><a href="http://playvalorant.com/" class="bold-black-link">VALORANT</a></em>, <em><a href="https://wildrift.leagueoflegends.com/" class="bold-black-link">League of Legends: Wild Rift</a></em>, and multiple work-in-progress
-              titles.&nbsp;In<br />
-              addition,
-              <a href="https://riotforgegames.com/en-us/" class="bold-black-link">Riot Forge</a>
-              gives developers access to Riot’s IP to create games like
-              <em>
-                <a href="https://ruinedking.com/en-us/" class="bold-black-link">
-                  Ruined<br />
-                  King
-                </a>
-              </em>
-              and plenty of other adventures across Runeterra. We’re also expanding the<br />
-              world of Runeterra through multimedia projects across music, comic books, board<br />
-              games, and
-              <em><a href="https://www.youtube.com/watch?v=IA-v_LB3Qpc" class="bold-black-link">Arcane</a></em>, our Emmy Award-winning animated series.
-            </p>
-            <p style="font-size: 20px;">
-              The annual
-              <a href="https://watch.lolesports.com/" class="bold-black-link">League of Legends World Championship</a>
-              features qualified esports<br />
-              teams from 12 international leagues. Worlds is the most widely viewed and followed<br />
-              esport tournament, and it’s among the largest and most popular gaming and<br />
-              sporting events in the world.&nbsp;
-            </p>
-            <p style="font-size: 20px;">
-              Founded by Brandon Beck and Marc Merrill, and led by CEO Dylan Jadeja, Riot is<br />
-              headquartered in Los Angeles, California, and has 4,500+ Rioters in 20+ offices<br />
-              worldwide. Riot has been certified as a
-              <a href="https://www.greatplacetowork.com/certified-company/1243999" class="bold-black-link">Great Place to Work</a>
-              for three years in a row<br />
-              and featured on numerous lists including Fortune’s “100 Best Companies to Work<br />
-              For,” “25 Best Companies to Work in Technology,” “100 Best Workplaces for<br />
-              Millennials,” and “50 Best Workplaces for Flexibility.”
-            </p>
+              <p style="font-size: 20px;">
+                With <em>League</em> in its second decade, we’re continuing to evolve the game while delivering new experiences to players with <em><a href="http://teamfighttactics.com/" class="bold-black-link">Teamfight Tactics</a></em>,
+                <em><a href="http://playruneterra.com/" class="bold-black-link">Legends of Runeterra</a></em>, <em><a href="http://playvalorant.com/" class="bold-black-link">VALORANT</a></em>,
+                <em><a href="https://wildrift.leagueoflegends.com/" class="bold-black-link">League of Legends: Wild Rift</a></em>, and multiple work-in-progress titles.&nbsp;In addition,
+                <a href="https://riotforgegames.com/en-us/" class="bold-black-link">Riot Forge</a>
+                gives developers access to Riot’s IP to create games like
+                <em>
+                  <a href="https://ruinedking.com/en-us/" class="bold-black-link">
+                    Ruined King
+                  </a>
+                </em>
+                and plenty of other adventures across Runeterra. We’re also expanding the world of Runeterra through multimedia projects across music, comic books, board games, and
+                <em><a href="https://www.youtube.com/watch?v=IA-v_LB3Qpc" class="bold-black-link">Arcane</a></em>, our Emmy Award-winning animated series.
+              </p>
+              <p style="font-size: 20px;">
+                The annual
+                <a href="https://watch.lolesports.com/" class="bold-black-link">League of Legends World Championship</a>
+                features qualified esports teams from 12 international leagues. Worlds is the most widely viewed and followed esport tournament, and it’s among the largest and most popular gaming and sporting events in the world.&nbsp;
+              </p>
+              <p style="font-size: 20px;">
+                Founded by Brandon Beck and Marc Merrill, and led by CEO Dylan Jadeja, Riot is headquartered in Los Angeles, California, and has 4,500+ Rioters in 20+ offices
+                <a href="https://www.greatplacetowork.com/certified-company/1243999" class="bold-black-link">Great Place to Work</a>
+                for three years in a row and featured on numerous lists including Fortune’s “100 Best Companies to Work For,” “25 Best Companies to Work in Technology,” “100 Best Workplaces for Millennials,” and “50 Best Workplaces for
+                Flexibility.”
+              </p>
+            </div>
           </div>
         </div>
       </div>
@@ -142,14 +128,14 @@
             </div>
           </div>
         </div>
-        <div class="background-container">
+        <div class="section5-container">
           <div class="flex-container">
             <div class="image1-container">
-              <img src="images/champion1.jpg" alt="League Champion1" width="500" height="500" />
+              <img src="images/champion1.jpg" alt="League Champion1" width="600" height="600" />
             </div>
 
             <div class="text-content">
-              <h3>Diversity & Inclusion</h3>
+              <h3 style="font-weight: bold; font-size: 35px;">Diversity & Inclusion</h3>
               <div class="copy prose">
                 <p style="line-height: 1.38; margin-top: 0; margin-bottom: 0;">
                   We’re focused on making Riot a great home for people<br />
@@ -157,70 +143,103 @@
                   diversity and inclusion.
                 </p>
               </div>
-              <a href="https://www.riotgames.com/en/diversity-and-inclusion" class="button">
-                <span>Learn More</span>
+              <div class="button-container">
+                <a href="https://www.riotgames.com/en/diversity-and-inclusion" class="button">
+                  <span>Learn More</span>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="flex-container">
+            <div class="image2-container">
+              <img src="images/champion2.jpg" alt="League Champion1" width="600" height="600" />
+            </div>
+
+            <div class="text-content">
+              <h3 style="font-weight: bold; font-size: 35px;">Social Impact</h3>
+              <div class="copy prose">
+                <p style="line-height: 1.38; margin-top: 0; margin-bottom: 0;">
+                  Through corporate social responsibility, we hope to<br />
+                  apply our unique resources and strengths to create a<br />
+                  positive and lasting impact for all of our stakeholders,<br />
+                  players, Rioters, our communities, and our planet.
+                </p>
+              </div>
+              <div class="button-container">
+                <a href="https://www.riotgames.com/en/diversity-and-inclusion" class="button">
+                  <span>Learn More</span>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="section6-container">
+          <div class="we-are-global-heading">
+            <h2 style="font-size: 60px; font-weight: bold;">We are global</h2>
+            <p style="font-size: 30px">
+              Riot Games’ HQ is located in sunny Los Angeles, but we have many more offices around the<br/>globe. We’re looking for passionate gamers who are also leaders in their field to help us deliver<br/>value to players—no matter where they
+              play.
+            </p>
+            <div style="text-align: center;">
+              <a href="https://www.riotgames.com/en/work-with-us/offices" class="button" style="margin-top: 20px; display: inline-block;">
+                <span>Explore our offices</span>
               </a>
             </div>
           </div>
-        </div>
 
-        <div class="flex-container">
-          <div class="image1-container">
-            <img src="images/champion1.jpg" alt="League Champion1" width="500" height="500" />
-          </div>
-
-          <div class="text-content">
-            <h3>Diversity & Inclusion</h3>
-            <div class="copy prose">
-              <p style="line-height: 1.38; margin-top: 0; margin-bottom: 0;">
-                We’re focused on making Riot a great home for people<br />
-                who love making games and setting a high bar for<br />
-                diversity and inclusion.
-              </p>
-            </div>
-            <a href="https://www.riotgames.com/en/diversity-and-inclusion" class="button">
-              <span>Learn More</span>
-            </a>
-          </div>
-        </div>
-
-        <div class="heading heading--4" style="text-align: center;">
-          <h2>We are global</h2>
-        </div>
-        <div class="copy copy--large copy--light prose" style="text-align: center;">
-          <p>
-            Riot Games’ HQ is located in sunny Los Angeles, but we have many more offices around the globe. We’re looking for passionate gamers who are also leaders in their field to help us deliver value to players—no matter where they
-            play.
-          </p>
-        </div>
-        <div style="text-align: center;">
-          <a href="https://www.riotgames.com/en/work-with-us/offices" class="button button--inverse"><span>Explore our offices</span></a>
-          <div class="randomiser-list-item__heading">
-            <h3 class="heading heading--5 heading--light">Dubai</h3>
-            <p class="heading heading--5 heading--light heading--muted">UAE</p>
-          </div>
-          <div class="randomiser-list-item__content">Open Positions:<span class="badge">0</span></div>
-          <div class="randomiser-list-item__heading">
-            <h3 class="heading heading--5 heading--light">Dubai</h3>
-            <p class="heading heading--5 heading--light heading--muted">UAE</p>
-          </div>
-          <div class="randomiser-list-item__content">Open Positions:<span class="badge">0</span></div>
-          <div class="randomiser-list-item__heading">
-            <h3 class="heading heading--5 heading--light">Dubai</h3>
-            <p class="heading heading--5 heading--light heading--muted">UAE</p>
-          </div>
-          <div class="randomiser-list-item__content">Open Positions:<span class="badge">0</span></div>
-        </div>
-        <div class="widget__wrapper widget__wrapper--textwithcta js-widget js-widget--desktop visible--desktop js-widget--tablet visible--tablet js-widget--mobile visible--mobile" data-widget-id="e4cf8388de99afb6ab2908f546aa72cd">
-          <div
-            data-props='{"_id":"e4cf8388de99afb6ab2908f546aa72cd","title":"Work With Us","callToActionLink":"/en/work-with-us","callToActionText":"Explore a career at Riot","callToActionNewWindow":false,"description":null,"staticImage":null,"className":null,"i18n":{"__languages":[{"name":"Bahasa Indonesia","slug":"id","code":"id_id"},{"name":"Bahasa Melayu","slug":"ms","code":"ms_MY"},{"name":"Português do Brasil","slug":"pt-br","code":"pt_br"},{"name":"Čeština","slug":"cs","code":"cs_CZ"},{"name":"English","slug":"en","code":"en_US"},{"name":"Français","slug":"fr","code":"fr_fr"},{"name":"Deutsch","slug":"de","code":"de_de"},{"name":"Ελληνικά","slug":"el","code":"el_GR"},{"name":"Magyar","slug":"hu","code":"hu_HU"},{"name":"Italiano","slug":"it","code":"it_IT"},{"name":"日本語","slug":"ja","code":"ja_ja"},{"name":"한국어","slug":"ko","code":"ko_ko"},{"name":"Español (Latinoamérica)","slug":"es-419","code":"es_419"},{"name":"Polski","slug":"pl","code":"pl_PL"},{"name":"Română","slug":"ro","code":"ro_RO"},{"name":"Русский","slug":"ru","code":"ru_ru"},{"name":"中文 (简体字)","slug":"zh-cn","code":"zh_cn"},{"name":"Español","slug":"es","code":"es_es"},{"name":"ภาษาไทย","slug":"th","code":"th_th"},{"name":"繁體中文","slug":"zh-hant","code":"zh_hant"},{"name":"Türkçe","slug":"tr","code":"tr_tr"},{"name":"Tiếng Việt","slug":"vi","code":"vi_vi"}]},"applyImpactReportStyle":null}'
-            class="widget null widget--spacing-standard"
-          >
-            <div class="text-with-cta">
-              <h2 class="heading heading--3">Work With Us</h2>
-              <a href="https://www.riotgames.com/en/work-with-us" class="button"><span>Explore a career at Riot</span></a>
+          <div class="row">
+            <div class="location-container">
+              <div class="image-column">
+                <img src="images/dubai.jpg" alt="Dubai" width="300" height="200" />
+              </div>
+              <div class="info-column">
+                <h3 class="heading heading--5 heading--light">Dubai</h3>
+                <p class="heading heading--5 heading--light heading--muted">UAE</p>
+              </div>
+              <div class="open-positions-column">
+                <p>Open Positions: <span class="badge">0</span></p>
+              </div>
             </div>
           </div>
+
+          <div class="row">
+            <div class="location-container">
+              <div class="image-column">
+                <img src="images/sydney.jpg" alt="Sydney" width="300" height="200" />
+              </div>
+              <div class="info-column">
+                <h3 class="heading heading--5 heading--light">Sydney</h3>
+                <p class="heading heading--5 heading--light heading--muted">Australia</p>
+              </div>
+              <div class="open-positions-column">
+                <p>Open Positions: <span class="badge">0</span></p>
+              </div>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="location-container">
+              <div class="image-column">
+                <img src="images/singapore.jpg" alt="Singapore" width="300" height="200" />
+              </div>
+              <div class="info-column">
+                <h3 class="heading heading--5 heading--light">Singapore</h3>
+                <p class="heading heading--5 heading--light heading--muted">Singapore</p>
+              </div>
+              <div class="open-positions-column">
+                <p>Open Positions: <span class="badge">0</span></p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="text-with-cta text-center">
+          <h2 style="font-size: 60px; font-weight: bold">Work With Us</h2>
+          <div style="text-align: center;">
+          <a href="https://www.riotgames.com/en/work-with-us" class="button" class="button" style="margin-top: 20px; margin-bottom: 20px; display: inline-block;"><span>Explore a career at Riot</span></a>
+        </div>
         </div>
 
         <footer>
