--- a/about-us.html
+++ b/about-us.html
@@ -178,9 +178,10 @@
         <div class="section6-container">
           <div class="we-are-global-heading">
             <h2 style="font-size: 60px; font-weight: bold;">We are global</h2>
-            <p style="font-size: 30px">
-              Riot Games’ HQ is located in sunny Los Angeles, but we have many more offices around the<br/>globe. We’re looking for passionate gamers who are also leaders in their field to help us deliver<br/>value to players—no matter where they
-              play.
+            <p style="font-size: 30px;">
+              Riot Games’ HQ is located in sunny Los Angeles, but we have many more offices around the<br />
+              globe. We’re looking for passionate gamers who are also leaders in their field to help us deliver<br />
+              value to players—no matter where they play.
             </p>
             <div style="text-align: center;">
               <a href="https://www.riotgames.com/en/work-with-us/offices" class="button" style="margin-top: 20px; display: inline-block;">
@@ -236,10 +237,10 @@
         </div>
 
         <div class="text-with-cta text-center">
-          <h2 style="font-size: 60px; font-weight: bold">Work With Us</h2>
+          <h2 style="font-size: 60px; font-weight: bold;">Work With Us</h2>
           <div style="text-align: center;">
-          <a href="https://www.riotgames.com/en/work-with-us" class="button" class="button" style="margin-top: 20px; margin-bottom: 20px; display: inline-block;"><span>Explore a career at Riot</span></a>
-        </div>
+            <a href="https://www.riotgames.com/en/work-with-us" class="button" class="button" style="margin-top: 20px; margin-bottom: 20px; display: inline-block;"><span>Explore a career at Riot</span></a>
+          </div>
         </div>
 
         <footer>
