--- a/index.html
+++ b/index.html
@@ -183,10 +183,20 @@
         </div>
       </div>
     </div>
-    <footer class="footer_container">
-      <div class="footer_upper">
-        <img class="nocircle_fist" src="images/fist_nocircle.png" alt="Riot Logo" />
-        <ul class="nav_down">
+    <footer>
+      <div class="footer-container">
+        <div class="logo">
+          <span class="icon-riot" style="width: 38px; height: 40px; line-height: 40px;">
+            <span class="is-vhidden"></span>
+            <svg width="38" height="40" dataname="Layer 1" viewBox="0 0 185.47 163.51">
+              <path
+                class="cls-1"
+                d="M98.77 0L0 45.74l24.61 93.66 18.73-2.3-5.15-58.89 6.15-2.74 10.62 60.2 32.01-3.93-5.69-65 6.09-2.71 11.68 66.23 32.38-3.98-6.23-71.25 6.16-2.74 12.77 72.43 32.01-3.93V19.38L98.77 0zm2.32 142.05l1.63 9.22 73.42 12.24v-30.68l-75.01 9.21-.04.01zM176.17.71V0h3.64v.71zm1.41 3.94V.4h.81v4.25zm3 0V0h.8v4.65zm2.21 .83L183 3.41 184.44 0h.84l-2.06 4.65zm1.83 0V0h.81v4.65z"
+              ></path>
+            </svg>
+          </span>
+        </div>
+        <ul class="left">
           <li>PRESS</li>
           <li>SECURITY</li>
           <li>LEGAL</li>
@@ -198,10 +208,57 @@
           <li>E-VERIFY</li>
           <li>ACCESSIBILITY</li>
         </ul>
+        <div class="right">
+          <div class="footer__social">
+            <a target="_blank" rel="noopener" href="https://www.facebook.com/RiotGames/">
+              <span class="icon" style="width: 9px; height: 16px; line-height: 16px;">
+                <span class="is-vhidden">Follow us on Facebook</span>
+                <svg viewBox="0 0 9 16">
+                  <path d="M5.7 16V8.7h2.4l.4-2.8H5.7V4c0-.8.2-1.4 1.4-1.4h1.5V.1C8.4.1 7.5 0 6.5 0 4.3 0 2.8 1.3 2.8 3.8v2.1H.3v2.8h2.5V16h2.9z"></path>
+                </svg>
+              </span>
+            </a>
+            <a target="_blank" rel="noopener" href="https://twitter.com/riotgames">
+              <span class="icon" style="width: 19px; height: 14px; line-height: 14px;">
+                <span class="is-vhidden">Follow us on Twitter</span>
+                <svg viewBox="0 0 19 14">
+                  <path
+                    d="M19 1.5c-.7.3-1.5.5-2.3.6.8-.4 1.4-1.1 1.7-2-.8.4-1.6.7-2.5.9-.7-.6-1.7-1-2.8-1-2.2 0-3.9 1.6-3.9 3.6 0 .3 0 .5.1.8C6 4.3 3.1 2.9 1.1.9.8 1.4.6 2 .6 2.6c0 1.2.7 2.3 1.8 2.9-.6 0-1.3-.2-1.8-.4C.6 6.8 2 8.2 3.8 8.5c-.3.1-.7.1-1 .1h-.7c.5 1.4 2 2.4 3.7 2.4-1.3 1-3 1.6-4.9 1.6H0c1.8 1 3.8 1.5 6.1 1.5 7.2-.1 11.1-5.5 11-10.2v-.5c.7-.5 1.4-1.1 1.9-1.9z"
+                  ></path>
+                </svg>
+              </span>
+            </a>
+            <a target="_blank" rel="noopener" href="https://www.linkedin.com/company/riot-games">
+              <span class="icon" style="width: 16px; height: 16px; line-height: 16px;">
+                <span class="is-vhidden">Share this on LinkedIn</span>
+                <svg viewBox="0 0 16 16">
+                  <path d="M.3 5.3h3.3V16H.3z"></path>
+                  <ellipse cx="1.9" cy="1.9" rx="1.9" ry="1.9"></ellipse>
+                  <path d="M16 16h-3.3v-5.2c0-1.2 0-2.8-1.7-2.8s-2 1.4-2 2.7V16H5.7V5.3h3.2v1.5C9.3 5.9 10.4 5 12 5c3.4 0 4 2.2 4 5.1V16z"></path>
+                </svg>
+              </span>
+            </a>
+            <a target="_blank" rel="noopener" href="https://www.youtube.com/riotgames">
+              <span class="icon" style="width: 19px; height: 13px; line-height: 13px;">
+                <span class="is-vhidden">Watch on YouTube</span>
+                <svg viewBox="0 0 19 13">
+                  <path
+                    d="M18.6 2.8s-.2-1.3-.7-1.8C17.2.3 16.4.3 16 .2 13.4 0 9.5 0 9.5 0S5.6 0 3 .2c-.4 0-1.1 0-1.9.8-.5.5-.7 1.8-.7 1.8s-.2 1.5-.2 3v1.4c0 1.5.2 3 .2 3s.2 1.3.7 1.8c.7.7 1.6.7 2 .8 1.6.2 6.4.2 6.4.2s3.9 0 6.5-.2c.4 0 1.1 0 1.9-.8.6-.6.7-1.8.7-1.8s.2-1.5.2-3V5.8l-.2-3zm-11 6.1V3.7l5 2.6-5 2.6z"
+                  ></path>
+                </svg>
+              </span>
+            </a>
+          </div>
+        </div>
       </div>
       <div class="separator"></div>
-      <div class="footer_lower">
-        <p>Azure Python | All rights reserved 2023.</p>
+      <div class="footer-bottom">
+        <div class="left-text">
+          <p>Azure Python | All rights reserved 2023.</p>
+        </div>
+        <div class="right-text">
+          TO THE SURFACE ▲
+        </div>
       </div>
     </footer>
   </body>
