Change about-us footer-bottom text

--- a/about-us.html
+++ b/about-us.html
@@ -314,7 +314,7 @@
           <div class="separator"></div>
           <div class="footer-bottom">
             <div class="left-text">
-              Cookie Preferences | ©2023 Riot Games, Inc. All Rights Reserved.
+              <p>Azure Python | All rights reserved 2023.</p>
             </div>
             <div class="right-text">
               TO THE SURFACE ▲
